[package]
name = "luhn2"
version = "0.1.2"
authors = ["Lukas Nemec <lu.nemec@gmail.com>"]
description = "Luhn algorithm check."
homepage = "https://github.com/lunemec/rust-luhn"
repository = "https://github.com/lunemec/rust-luhn"
readme = "README.md"
keywords = ["luhn"]
license = "WTFPL"

[dependencies]
num = "0.1"
num-digitize = "0.4"
